--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@
     0.125em 0.125em 0.25em rgba(0, 0, 0, 0.15);
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 @media (min-width: 800px) {
   :root {
     --fs-h1: 4.5rem;
